--- a/dev/assets/stylesheets/main.css
+++ b/dev/assets/stylesheets/main.css
@@ -1,24 +1,24 @@
 @import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400);
 @import url(http://fonts.googleapis.com/css?family=Lustria);
-/* line 19, ../sass/main.sass */
+/* line 15, ../sass/main.sass */
 body, body * {
   margin: 0;
   padding: 0;
 }
 
-/* line 24, ../sass/main.sass */
+/* line 20, ../sass/main.sass */
 pre {
   margin: -6px 0 8px 0;
 }
 
-/* line 27, ../sass/main.sass */
+/* line 23, ../sass/main.sass */
 h1 {
   font-size: 60px;
   font-weight: 300;
   letter-spacing: -2px;
 }
 
-/* line 32, ../sass/main.sass */
+/* line 28, ../sass/main.sass */
 h2 {
   font-size: 30px;
   border-bottom: 2px solid #e2e2e2;
@@ -27,14 +27,14 @@ h2 {
   letter-spacing: -1px;
 }
 
-/* line 39, ../sass/main.sass */
+/* line 35, ../sass/main.sass */
 h3 {
   font-size: 22px;
   margin-bottom: 10px;
   font-weight: 400;
 }
 
-/* line 44, ../sass/main.sass */
+/* line 40, ../sass/main.sass */
 p {
   line-height: 160%;
   margin-bottom: 15px;
@@ -43,53 +43,53 @@ p {
   line-height: 25px;
 }
 
-/* line 51, ../sass/main.sass */
+/* line 47, ../sass/main.sass */
 a[href] {
   color: black;
 }
 
-/* line 54, ../sass/main.sass */
+/* line 51, ../sass/main.sass */
 body {
   font-family: "Source Sans Pro", sans-serif;
   font-size: 16px;
 }
-/* line 55, ../sass/main.sass */
+/* line 52, ../sass/main.sass */
 body * {
   overflow: hidden;
 }
-/* line 61, ../sass/main.sass */
+/* line 58, ../sass/main.sass */
 body > * {
   width: 960px;
   margin: 0 auto;
 }
-/* line 64, ../sass/main.sass */
+/* line 61, ../sass/main.sass */
 body > header {
   margin-top: 30px;
 }
-/* line 66, ../sass/main.sass */
+/* line 63, ../sass/main.sass */
 body > header ul {
   margin-top: 6px;
   float: right;
 }
-/* line 69, ../sass/main.sass */
+/* line 66, ../sass/main.sass */
 body > header ul li {
   display: inline-block;
   padding: 10px 0;
   margin: 0 15px;
 }
-/* line 73, ../sass/main.sass */
+/* line 70, ../sass/main.sass */
 body > header ul li:first-child {
   border-bottom: 2px solid black;
   padding-bottom: 8px;
 }
-/* line 77, ../sass/main.sass */
+/* line 74, ../sass/main.sass */
 body > header figure {
   background: url(http://www.ebsqart.com/Art/Paintings/original-oil-on-canvas-varnished/98034/650/650/Fire-Abstract-2.jpg);
   background-size: 200px;
   float: left;
   margin-left: -1px;
 }
-/* line 82, ../sass/main.sass */
+/* line 79, ../sass/main.sass */
 body > header figure a {
   background: url(../images/logos/svg/logo-cutout.svg) no-repeat;
   font-size: 40px;
@@ -101,22 +101,28 @@ body > header figure a {
   text-indent: -9999px;
 }
 
-/* line 97, ../sass/main.sass */
+/* line 94, ../sass/main.sass */
 #intro {
   margin: 100px 0 60px 0;
 }
-/* line 99, ../sass/main.sass */
+/* line 96, ../sass/main.sass */
 #intro h3 {
   font-family: Lustria;
+  margin-left: 12px;
 }
 
-/* line 102, ../sass/main.sass */
+/* line 100, ../sass/main.sass */
 #tags {
   margin-bottom: 70px;
 }
-/* line 104, ../sass/main.sass */
+/* line 102, ../sass/main.sass */
 #tags section {
   margin-top: 20px;
+}
+/* line 104, ../sass/main.sass */
+#tags [tags] {
+  font-size: 14px;
+  font-weight: 300;
 }
 /* line 107, ../sass/main.sass */
 #tags [tags] ul {
@@ -178,7 +184,7 @@ body > header figure a {
 /* line 151, ../sass/main.sass */
 #projects article [tags], #blog article [tags], #post article [tags] {
   text-transform: uppercase;
-  margin-top: 20px;
+  margin-top: 12px;
 }
 /* line 154, ../sass/main.sass */
 #projects article [tags] ul, #blog article [tags] ul, #post article [tags] ul {
@@ -210,8 +216,12 @@ body > header figure a {
 #post [tags] {
   margin-bottom: 40px;
 }
+/* line 174, ../sass/main.sass */
+#post [ng-include] ul {
+  font-family: Lustria;
+}
 
-/* line 176, ../sass/main.sass */
+/* line 178, ../sass/main.sass */
 #projects [image-modal], #projects [video-modal] {
   position: fixed;
   width: 100%;
@@ -222,34 +232,34 @@ body > header figure a {
   text-align: center;
   background-color: rgba(0, 0, 0, 0.7);
 }
-/* line 185, ../sass/main.sass */
+/* line 187, ../sass/main.sass */
 #projects [image-modal]:before, #projects [video-modal]:before {
   content: "";
   display: inline-block;
   height: 100%;
   vertical-align: middle;
 }
-/* line 190, ../sass/main.sass */
+/* line 192, ../sass/main.sass */
 #projects [image-modal] figure, #projects [video-modal] figure {
   display: inline-block;
   vertical-align: middle;
 }
-/* line 193, ../sass/main.sass */
+/* line 195, ../sass/main.sass */
 #projects [image-modal] figure img, #projects [video-modal] figure img {
   max-height: 100%;
   max-width: 80%;
 }
-/* line 199, ../sass/main.sass */
+/* line 201, ../sass/main.sass */
 #projects [image-modal] figure figcaption {
   display: inline-block;
   color: white;
   margin-top: 20px;
 }
-/* line 204, ../sass/main.sass */
+/* line 206, ../sass/main.sass */
 #projects [video-modal] figure {
   width: 100%;
 }
-/* line 206, ../sass/main.sass */
+/* line 208, ../sass/main.sass */
 #projects [video-modal] figure div {
   width: 80%;
   max-width: 1280px;
@@ -257,13 +267,13 @@ body > header figure a {
   position: relative;
   display: inline-block;
 }
-/* line 212, ../sass/main.sass */
+/* line 214, ../sass/main.sass */
 #projects [video-modal] figure div:after {
   content: "";
   padding-top: 56.25%;
   display: block;
 }
-/* line 216, ../sass/main.sass */
+/* line 218, ../sass/main.sass */
 #projects [video-modal] figure div iframe {
   width: 100%;
   height: 100%;
@@ -271,62 +281,60 @@ body > header figure a {
   left: 0;
   top: 0;
 }
-/* line 223, ../sass/main.sass */
-#projects img {
-  cursor: pointer;
-}
-/* line 225, ../sass/main.sass */
-#projects img:hover {
-  opacity: 0.95;
-}
-/* line 229, ../sass/main.sass */
+/* line 226, ../sass/main.sass */
 #projects article [image-slider] {
   float: right;
-  margin-left: 20px;
+  width: 38.19656%;
+  margin-left: 58px;
+  overflow: visible;
 }
-/* line 232, ../sass/main.sass */
+/* line 231, ../sass/main.sass */
+#projects article [image-slider] > div {
+  overflow: visible;
+}
+/* line 233, ../sass/main.sass */
 #projects article [image-slider] nav {
   float: left;
+  margin-left: -38px;
 }
-/* line 234, ../sass/main.sass */
-#projects article [image-slider] nav a {
+/* line 237, ../sass/main.sass */
+#projects article [image-slider] nav div a {
   width: 0;
   height: 0;
   border-style: solid;
   line-height: 0;
   cursor: pointer;
   display: block;
-  margin: 10px;
+  margin: 6px 15px;
 }
-/* line 242, ../sass/main.sass */
-#projects article [image-slider] nav a:first-child {
+/* line 245, ../sass/main.sass */
+#projects article [image-slider] nav div:first-child a {
   border-color: transparent;
   border-left-color: #505050;
   border-width: 5px 0 5px 8.7px;
 }
-/* line 246, ../sass/main.sass */
-#projects article [image-slider] nav a:first-child.disabled {
+/* line 249, ../sass/main.sass */
+#projects article [image-slider] nav div:first-child a.disabled {
   border-left-color: #e2e2e2;
 }
-/* line 248, ../sass/main.sass */
-#projects article [image-slider] nav a:last-child {
+/* line 251, ../sass/main.sass */
+#projects article [image-slider] nav div:last-child a {
   border-color: transparent;
   border-right-color: #505050;
   border-width: 5px 8.7px 5px 0;
 }
-/* line 252, ../sass/main.sass */
-#projects article [image-slider] nav a:last-child.disabled {
+/* line 255, ../sass/main.sass */
+#projects article [image-slider] nav div:last-child a.disabled {
   border-right-color: #e2e2e2;
 }
-/* line 254, ../sass/main.sass */
+/* line 257, ../sass/main.sass */
 #projects article [image-slider] ul {
-  width: 366.68701px;
-  padding-bottom: 61.8033%;
+  padding-bottom: 66.2%;
   white-space: nowrap;
   display: block;
   position: relative;
 }
-/* line 260, ../sass/main.sass */
+/* line 262, ../sass/main.sass */
 #projects article [image-slider] ul li {
   display: none;
   width: 100%;
@@ -340,11 +348,11 @@ body > header figure a {
   -o-transition-duration: 0.2s;
   transition-duration: 0.2s;
 }
-/* line 266, ../sass/main.sass */
+/* line 268, ../sass/main.sass */
 #projects article [image-slider] ul li.old, #projects article [image-slider] ul li.current, #projects article [image-slider] ul li.current + li {
   display: inline-block;
 }
-/* line 268, ../sass/main.sass */
+/* line 270, ../sass/main.sass */
 #projects article [image-slider] ul li.old {
   -webkit-transform: translateX(-100%);
   -moz-transform: translateX(-100%);
@@ -352,7 +360,7 @@ body > header figure a {
   -o-transform: translateX(-100%);
   transform: translateX(-100%);
 }
-/* line 270, ../sass/main.sass */
+/* line 272, ../sass/main.sass */
 #projects article [image-slider] ul li.current {
   -webkit-transform: translateX(0);
   -moz-transform: translateX(0);
@@ -360,7 +368,7 @@ body > header figure a {
   -o-transform: translateX(0);
   transform: translateX(0);
 }
-/* line 272, ../sass/main.sass */
+/* line 274, ../sass/main.sass */
 #projects article [image-slider] ul li.current + li {
   -webkit-transform: translateX(100%);
   -moz-transform: translateX(100%);
@@ -368,176 +376,229 @@ body > header figure a {
   -o-transform: translateX(100%);
   transform: translateX(100%);
 }
-/* line 274, ../sass/main.sass */
+/* line 276, ../sass/main.sass */
 #projects article [image-slider] ul li img {
   width: 100%;
   -webkit-user-drag: none;
 }
-
 /* line 279, ../sass/main.sass */
-#blog article, #post article {
-  width: 593.31299px;
+#projects article [image-slider] ul li img:hover {
+  opacity: 0.95;
 }
 /* line 281, ../sass/main.sass */
+#projects img {
+  cursor: pointer;
+}
+
+/* line 285, ../sass/main.sass */
+#blog article, #post article {
+  width: 61.8033%;
+}
+/* line 287, ../sass/main.sass */
 #blog article ol, #blog article ul, #post article ol, #post article ul {
   overflow: visible;
   margin-left: 20px;
 }
-/* line 284, ../sass/main.sass */
+/* line 290, ../sass/main.sass */
 #blog article ol li, #blog article ul li, #post article ol li, #post article ul li {
   overflow: visible;
   margin-bottom: 15px;
 }
-/* line 287, ../sass/main.sass */
+/* line 293, ../sass/main.sass */
 #blog article ol li em, #blog article ul li em, #post article ol li em, #post article ul li em {
   font-style: normal;
 }
-/* line 289, ../sass/main.sass */
+/* line 295, ../sass/main.sass */
 #blog article ol li p, #blog article ul li p, #post article ol li p, #post article ul li p {
   font-size: 14px;
   color: #505050;
 }
 
-/* line 292, ../sass/main.sass */
+/* line 298, ../sass/main.sass */
 #post {
   margin-top: 80px;
 }
-/* line 294, ../sass/main.sass */
+/* line 300, ../sass/main.sass */
 #post h1 {
   font-size: 50px;
   margin-bottom: 30px;
   line-height: 54px;
 }
-/* line 298, ../sass/main.sass */
+/* line 304, ../sass/main.sass */
 #post h2 {
   font-size: 20px;
 }
-/* line 300, ../sass/main.sass */
+/* line 306, ../sass/main.sass */
 #post h3 {
   font-size: 30px;
   font-weight: 400;
-  margin-bottom: 10px;
+  margin-bottom: 12px;
   margin-top: 5px;
 }
-/* line 305, ../sass/main.sass */
+/* line 311, ../sass/main.sass */
 #post h4 {
   font-size: 22px;
   margin-bottom: 10px;
   margin-top: 17px;
   color: #505050;
 }
-/* line 310, ../sass/main.sass */
+/* line 316, ../sass/main.sass */
 #post span.code {
   background: #f0f0f0;
   font-family: monospace;
 }
-/* line 313, ../sass/main.sass */
+/* line 319, ../sass/main.sass */
 #post a.quote {
   text-decoration: none;
 }
-/* line 315, ../sass/main.sass */
+/* line 321, ../sass/main.sass */
 #post a.quote:hover {
   text-decoration: underline;
 }
 
-/* line 318, ../sass/main.sass */
+/* line 324, ../sass/main.sass */
 .scroll {
   position: relative;
 }
 
-@media all and (max-width: 500px) {
-  /* line 324, ../sass/main.sass */
-  body {
-    font-size: 14px;
+@media all and (min-width: 1201px) and (max-width: 1400px) {
+  /* line 330, ../sass/main.sass */
+  body > * {
+    width: 1020px;
   }
-  /* line 325, ../sass/main.sass */
+}
+@media all and (min-width: 1401px) {
+  /* line 334, ../sass/main.sass */
+  body > * {
+    width: 1080px;
+  }
+}
+@media all and (max-width: 500px) {
+  /* line 341, ../sass/main.sass */
+  body {
+    font-size: 13px;
+  }
+  /* line 342, ../sass/main.sass */
   body * {
     overflow: hidden;
   }
-  /* line 329, ../sass/main.sass */
+  /* line 346, ../sass/main.sass */
   body > * {
     width: auto;
     padding: 20px;
   }
 
-  /* line 333, ../sass/main.sass */
+  /* line 350, ../sass/main.sass */
   h1 {
     font-size: 42px;
     letter-spacing: -2px;
   }
 
-  /* line 337, ../sass/main.sass */
+  /* line 354, ../sass/main.sass */
   h2 {
-    font-size: 22px;
+    font-size: 25px;
     border-bottom: 2px solid #e2e2e2;
     padding-bottom: 10px;
     margin-bottom: 20px;
     letter-spacing: -1px;
   }
 
-  /* line 344, ../sass/main.sass */
+  /* line 361, ../sass/main.sass */
   h3 {
-    font-size: 18px;
+    font-size: 21px;
   }
 
-  /* line 347, ../sass/main.sass */
+  /* line 364, ../sass/main.sass */
   #intro {
     margin: 0 0 30px 0;
   }
-
-  /* line 350, ../sass/main.sass */
-  #tags {
-    margin-bottom: 50px;
+  /* line 366, ../sass/main.sass */
+  #intro h1 {
+    margin-bottom: 15px;
+  }
+  /* line 368, ../sass/main.sass */
+  #intro h3 {
+    margin-left: 8px;
   }
 
-  /* line 354, ../sass/main.sass */
+  /* line 371, ../sass/main.sass */
+  #tags {
+    display: none;
+  }
+
+  /* line 375, ../sass/main.sass */
   #projects h3, #blog h3 {
     margin-top: 15px;
-    margin-bottom: 5px;
   }
 
-  /* line 360, ../sass/main.sass */
+  /* line 380, ../sass/main.sass */
   #projects article [image-slider] {
     float: none;
     margin-left: 0;
     position: relative;
+    width: auto;
   }
-  /* line 364, ../sass/main.sass */
+  /* line 385, ../sass/main.sass */
   #projects article [image-slider] nav {
+    margin-left: 0;
     position: absolute;
-    background: white;
-    opacity: 0.5;
     bottom: 0;
     width: 100%;
     z-index: 1;
     float: none;
     text-align: center;
+    height: 100%;
   }
-  /* line 373, ../sass/main.sass */
+  /* line 394, ../sass/main.sass */
+  #projects article [image-slider] nav div {
+    background-color: rgba(255, 255, 255, 0.3);
+    height: 100%;
+  }
+  /* line 395, ../sass/main.sass */
+  #projects article [image-slider] nav div:before {
+    content: "";
+    display: inline-block;
+    height: 100%;
+    vertical-align: middle;
+  }
+  /* line 402, ../sass/main.sass */
+  #projects article [image-slider] nav div:first-child {
+    float: right;
+  }
+  /* line 404, ../sass/main.sass */
+  #projects article [image-slider] nav div:last-child {
+    float: left;
+  }
+  /* line 406, ../sass/main.sass */
+  #projects article [image-slider] nav div a {
+    display: inline-block;
+    vertical-align: middle;
+  }
+  /* line 410, ../sass/main.sass */
   #projects article [image-slider] ul {
     width: auto;
   }
 
-  /* line 376, ../sass/main.sass */
-  #blog article {
+  /* line 413, ../sass/main.sass */
+  #blog article, #post article {
     width: auto;
   }
 }
 @media all and (max-width: 460px) {
-  /* line 383, ../sass/main.sass */
+  /* line 420, ../sass/main.sass */
   body header {
     text-align: center;
   }
-  /* line 385, ../sass/main.sass */
+  /* line 422, ../sass/main.sass */
   body header figure {
     float: none;
     display: inline-block;
   }
-  /* line 388, ../sass/main.sass */
+  /* line 425, ../sass/main.sass */
   body header nav {
     clear: left;
   }
-  /* line 390, ../sass/main.sass */
+  /* line 427, ../sass/main.sass */
   body header nav ul {
     float: none;
   }
