--- a/dev/partials/home.html
+++ b/dev/partials/home.html
@@ -1,10 +1,10 @@
 <div id="intro">
-    <h1>design for use.</h1>
-    <h3>Most of the world designs for looks. I design for use.</h3>
+    <h1>Taylor McIntyre.</h1>
+    <h3>web developer &amp; experience designer.</h3>
 </div>
 
 <div id="tags" ng-controller="Tags">
-    <div tags></div>
+    <div tags show-tags="true"></div>
     <section>
         <p>These tags are from a project I am working on called SmartTags.</p>
     </section>
