--- a/dev/partials/slider-images.html
+++ b/dev/partials/slider-images.html
@@ -1,13 +1,20 @@
-<nav ng-click="$event.stopPropagation()">
-	<a ng-class="{disabled: nextDisabled}" ng-mouseup="nextImage(); $event.stopImmediatePropagation()"></a>
-	<a ng-class="{disabled: prevDisabled}" ng-mouseup="prevImage(); $event.stopImmediatePropagation()"></a>
-</nav>
+<div ng-swipe-right="prevImage(); $event.stopImmediatePropagation()" ng-swipe-left="nextImage(); $event.stopImmediatePropagation()">
+	<nav>
+		<div ng-mouseup="nextImage(); $event.stopImmediatePropagation()">
+			<a ng-class="{disabled: nextDisabled}"></a>
+		</div>
+		<div ng-mouseup="prevImage(); $event.stopImmediatePropagation()">
+			<a ng-class="{disabled: prevDisabled}"></a>
+		</div>
+	</nav>
 
-<ul>
-    <li ng-repeat="img in images" ng-class="{current: img == currentImage, old: img == images[images.indexOf(currentImage) - 1]}">
-        <figure>
-            <img ng-src="{{imageDir + img.src}}" ng-swipe-right="prevImage(); $event.stopImmediatePropagation()" ng-swipe-left="nextImage(); $event.stopImmediatePropagation()">
-            <!-- <figcaption>{{img.caption}}</figcaption> -->
-        </figure>
-    </li>
-</ul>
+	<ul>
+	    <li ng-repeat="img in images" ng-class="{current: img == currentImage, old: img == images[images.indexOf(currentImage) - 1]}">
+	        <figure>
+	            <img ng-src="{{imageDir + img.src}}">
+	            <!-- <figcaption>{{img.caption}}</figcaption> -->
+	        </figure>
+	    </li>
+	</ul>
+
+</div>
