--- a/dev/partials/home.html
+++ b/dev/partials/home.html
@@ -1,5 +1,5 @@
 <div id="intro">
-    <h1>Taylor McIntyre.</h1>
+    <h1>Taylor McIntyre</h1>
     <h3>web developer &amp; experience designer.</h3>
 </div>
 
