--- a/dev/assets/sass/main.sass
+++ b/dev/assets/sass/main.sass
@@ -52,6 +52,9 @@ body
 	*
 		overflow: hidden
 
+	h1, h2, h3, h4, h5
+		overflow: visible
+	
 	font-family: 'Source Sans Pro', sans-serif
 	font-size: 16px
 	>
@@ -234,12 +237,12 @@ body
 				float: left
 				margin-left: -38px
 				div
+					cursor: pointer
 					a
 						width: 0
 						height: 0
 						border-style: solid
 						line-height: 0
-						cursor: pointer
 						display: block
 						margin: 6px 15px
 					&:first-child a
@@ -309,7 +312,6 @@ body
 		margin-bottom: 12px
 		margin-top: 5px
 	h4
-		font-size: 22px
 		margin-bottom: 10px
 		margin-top: 17px
 		color: $dark-gray
@@ -329,10 +331,39 @@ body
 @media all and (min-width: 1201px) and (max-width: 1400px)
 	body > *
 		width: 1020px
+	h1
+		font-size: 62px
+	h2
+		font-size: 31px
+	h3
+		font-size: 23px
+	#post
+		h1
+			font-size: 52px
+		h2
+			font-size: 22px
+		h3
+			font-size: 32px
+
 
 @media all and (min-width: 1401px)
 	body > *
 		width: 1080px
+
+	h1
+		font-size: 64px
+	h2
+		font-size: 32px
+	h3
+		font-size: 24px
+	#post
+		h1
+			font-size: 54px
+		h2
+			font-size: 24px
+		h3
+			font-size: 36px
+
 
 
 
@@ -360,6 +391,20 @@ body
 
 	h3
 		font-size: 21px
+
+	#blog, #post
+		article
+			width: auto
+
+	#post
+		h1
+			font-size: 40px
+			line-height: 39px
+		h2
+			font-size: 20px
+		h3
+			font-size: 30px
+			line-height: 32px
 
 	#intro
 		margin: 0 0 30px 0
@@ -397,7 +442,7 @@ body
 							display: inline-block
 							height: 100%
 							vertical-align: middle
-						background-color: rgba(255, 255, 255, 0.3)
+						background-color: rgba(255, 255, 255, 0.02)
 						height: 100%
 						&:first-child
 							float: right
@@ -409,9 +454,6 @@ body
 
 				ul
 					width: auto
-	#blog, #post
-		article
-			width: auto
 
 
 @media all and (max-width: 460px)
