--- a/dev/assets/stylesheets/main.css
+++ b/dev/assets/stylesheets/main.css
@@ -57,39 +57,43 @@ body {
 body * {
   overflow: hidden;
 }
-/* line 58, ../sass/main.sass */
+/* line 55, ../sass/main.sass */
+body h1, body h2, body h3, body h4, body h5 {
+  overflow: visible;
+}
+/* line 61, ../sass/main.sass */
 body > * {
   width: 960px;
   margin: 0 auto;
 }
-/* line 61, ../sass/main.sass */
+/* line 64, ../sass/main.sass */
 body > header {
   margin-top: 30px;
 }
-/* line 63, ../sass/main.sass */
+/* line 66, ../sass/main.sass */
 body > header ul {
   margin-top: 6px;
   float: right;
 }
-/* line 66, ../sass/main.sass */
+/* line 69, ../sass/main.sass */
 body > header ul li {
   display: inline-block;
   padding: 10px 0;
   margin: 0 15px;
 }
-/* line 70, ../sass/main.sass */
+/* line 73, ../sass/main.sass */
 body > header ul li:first-child {
   border-bottom: 2px solid black;
   padding-bottom: 8px;
 }
-/* line 74, ../sass/main.sass */
+/* line 77, ../sass/main.sass */
 body > header figure {
   background: url(http://www.ebsqart.com/Art/Paintings/original-oil-on-canvas-varnished/98034/650/650/Fire-Abstract-2.jpg);
   background-size: 200px;
   float: left;
   margin-left: -1px;
 }
-/* line 79, ../sass/main.sass */
+/* line 82, ../sass/main.sass */
 body > header figure a {
   background: url(../images/logos/svg/logo-cutout.svg) no-repeat;
   font-size: 40px;
@@ -101,35 +105,35 @@ body > header figure a {
   text-indent: -9999px;
 }
 
-/* line 94, ../sass/main.sass */
+/* line 97, ../sass/main.sass */
 #intro {
   margin: 100px 0 60px 0;
 }
-/* line 96, ../sass/main.sass */
+/* line 99, ../sass/main.sass */
 #intro h3 {
   font-family: Lustria;
   margin-left: 12px;
 }
 
-/* line 100, ../sass/main.sass */
+/* line 103, ../sass/main.sass */
 #tags {
   margin-bottom: 70px;
 }
-/* line 102, ../sass/main.sass */
+/* line 105, ../sass/main.sass */
 #tags section {
   margin-top: 20px;
 }
-/* line 104, ../sass/main.sass */
+/* line 107, ../sass/main.sass */
 #tags [tags] {
   font-size: 14px;
   font-weight: 300;
 }
-/* line 107, ../sass/main.sass */
+/* line 110, ../sass/main.sass */
 #tags [tags] ul {
   list-style-type: none;
   margin: -3px;
 }
-/* line 110, ../sass/main.sass */
+/* line 113, ../sass/main.sass */
 #tags [tags] ul li {
   background: black;
   border: 1px solid black;
@@ -140,31 +144,31 @@ body > header figure a {
   margin-bottom: 0;
   cursor: pointer;
 }
-/* line 119, ../sass/main.sass */
+/* line 122, ../sass/main.sass */
 #tags [tags] ul li.selected {
   background: white;
   color: black;
 }
-/* line 122, ../sass/main.sass */
+/* line 125, ../sass/main.sass */
 #tags p {
   text-align: right;
   color: #505050;
 }
 
-/* line 129, ../sass/main.sass */
+/* line 132, ../sass/main.sass */
 #projects article a[href], #blog article a[href] {
   text-decoration: none;
 }
-/* line 131, ../sass/main.sass */
+/* line 134, ../sass/main.sass */
 #projects article a[href]:hover, #blog article a[href]:hover {
   text-decoration: underline;
 }
 
-/* line 135, ../sass/main.sass */
+/* line 138, ../sass/main.sass */
 #projects article, #blog article, #post article {
   margin-bottom: 20px;
 }
-/* line 138, ../sass/main.sass */
+/* line 141, ../sass/main.sass */
 #projects article section a, #blog article section a, #post article section a {
   cursor: pointer;
   font-weight: 600;
@@ -177,21 +181,21 @@ body > header figure a {
   margin-right: 16px;
   border-bottom: 1px dashed #cccccc;
 }
-/* line 149, ../sass/main.sass */
+/* line 152, ../sass/main.sass */
 #projects article section a:hover, #blog article section a:hover, #post article section a:hover {
   border-bottom-color: #4194e0;
 }
-/* line 151, ../sass/main.sass */
+/* line 154, ../sass/main.sass */
 #projects article [tags], #blog article [tags], #post article [tags] {
   text-transform: uppercase;
   margin-top: 12px;
 }
-/* line 154, ../sass/main.sass */
+/* line 157, ../sass/main.sass */
 #projects article [tags] ul, #blog article [tags] ul, #post article [tags] ul {
   list-style-type: none;
   margin: 0 -4px;
 }
-/* line 157, ../sass/main.sass */
+/* line 160, ../sass/main.sass */
 #projects article [tags] ul li, #blog article [tags] ul li, #post article [tags] ul li {
   float: left;
   padding: 4px 8px;
@@ -201,27 +205,27 @@ body > header figure a {
   color: #505050;
   cursor: pointer;
 }
-/* line 164, ../sass/main.sass */
+/* line 167, ../sass/main.sass */
 #projects article [tags] ul li.selected, #blog article [tags] ul li.selected, #post article [tags] ul li.selected {
   background: #505050;
   color: white;
 }
 
-/* line 169, ../sass/main.sass */
+/* line 172, ../sass/main.sass */
 #post h2 {
   padding-bottom: 20px;
   margin-bottom: 30px;
 }
-/* line 172, ../sass/main.sass */
+/* line 175, ../sass/main.sass */
 #post [tags] {
   margin-bottom: 40px;
 }
-/* line 174, ../sass/main.sass */
+/* line 177, ../sass/main.sass */
 #post [ng-include] ul {
   font-family: Lustria;
 }
 
-/* line 178, ../sass/main.sass */
+/* line 181, ../sass/main.sass */
 #projects [image-modal], #projects [video-modal] {
   position: fixed;
   width: 100%;
@@ -232,34 +236,34 @@ body > header figure a {
   text-align: center;
   background-color: rgba(0, 0, 0, 0.7);
 }
-/* line 187, ../sass/main.sass */
+/* line 190, ../sass/main.sass */
 #projects [image-modal]:before, #projects [video-modal]:before {
   content: "";
   display: inline-block;
   height: 100%;
   vertical-align: middle;
 }
-/* line 192, ../sass/main.sass */
+/* line 195, ../sass/main.sass */
 #projects [image-modal] figure, #projects [video-modal] figure {
   display: inline-block;
   vertical-align: middle;
 }
-/* line 195, ../sass/main.sass */
+/* line 198, ../sass/main.sass */
 #projects [image-modal] figure img, #projects [video-modal] figure img {
   max-height: 100%;
   max-width: 80%;
 }
-/* line 201, ../sass/main.sass */
+/* line 204, ../sass/main.sass */
 #projects [image-modal] figure figcaption {
   display: inline-block;
   color: white;
   margin-top: 20px;
 }
-/* line 206, ../sass/main.sass */
+/* line 209, ../sass/main.sass */
 #projects [video-modal] figure {
   width: 100%;
 }
-/* line 208, ../sass/main.sass */
+/* line 211, ../sass/main.sass */
 #projects [video-modal] figure div {
   width: 80%;
   max-width: 1280px;
@@ -267,13 +271,13 @@ body > header figure a {
   position: relative;
   display: inline-block;
 }
-/* line 214, ../sass/main.sass */
+/* line 217, ../sass/main.sass */
 #projects [video-modal] figure div:after {
   content: "";
   padding-top: 56.25%;
   display: block;
 }
-/* line 218, ../sass/main.sass */
+/* line 221, ../sass/main.sass */
 #projects [video-modal] figure div iframe {
   width: 100%;
   height: 100%;
@@ -281,60 +285,63 @@ body > header figure a {
   left: 0;
   top: 0;
 }
-/* line 226, ../sass/main.sass */
+/* line 229, ../sass/main.sass */
 #projects article [image-slider] {
   float: right;
   width: 38.19656%;
   margin-left: 58px;
   overflow: visible;
 }
-/* line 231, ../sass/main.sass */
+/* line 234, ../sass/main.sass */
 #projects article [image-slider] > div {
   overflow: visible;
 }
-/* line 233, ../sass/main.sass */
+/* line 236, ../sass/main.sass */
 #projects article [image-slider] nav {
   float: left;
   margin-left: -38px;
 }
-/* line 237, ../sass/main.sass */
+/* line 239, ../sass/main.sass */
+#projects article [image-slider] nav div {
+  cursor: pointer;
+}
+/* line 241, ../sass/main.sass */
 #projects article [image-slider] nav div a {
   width: 0;
   height: 0;
   border-style: solid;
   line-height: 0;
-  cursor: pointer;
   display: block;
   margin: 6px 15px;
 }
-/* line 245, ../sass/main.sass */
+/* line 248, ../sass/main.sass */
 #projects article [image-slider] nav div:first-child a {
   border-color: transparent;
   border-left-color: #505050;
   border-width: 5px 0 5px 8.7px;
 }
-/* line 249, ../sass/main.sass */
+/* line 252, ../sass/main.sass */
 #projects article [image-slider] nav div:first-child a.disabled {
   border-left-color: #e2e2e2;
 }
-/* line 251, ../sass/main.sass */
+/* line 254, ../sass/main.sass */
 #projects article [image-slider] nav div:last-child a {
   border-color: transparent;
   border-right-color: #505050;
   border-width: 5px 8.7px 5px 0;
 }
-/* line 255, ../sass/main.sass */
+/* line 258, ../sass/main.sass */
 #projects article [image-slider] nav div:last-child a.disabled {
   border-right-color: #e2e2e2;
 }
-/* line 257, ../sass/main.sass */
+/* line 260, ../sass/main.sass */
 #projects article [image-slider] ul {
   padding-bottom: 66.2%;
   white-space: nowrap;
   display: block;
   position: relative;
 }
-/* line 262, ../sass/main.sass */
+/* line 265, ../sass/main.sass */
 #projects article [image-slider] ul li {
   display: none;
   width: 100%;
@@ -348,11 +355,11 @@ body > header figure a {
   -o-transition-duration: 0.2s;
   transition-duration: 0.2s;
 }
-/* line 268, ../sass/main.sass */
+/* line 271, ../sass/main.sass */
 #projects article [image-slider] ul li.old, #projects article [image-slider] ul li.current, #projects article [image-slider] ul li.current + li {
   display: inline-block;
 }
-/* line 270, ../sass/main.sass */
+/* line 273, ../sass/main.sass */
 #projects article [image-slider] ul li.old {
   -webkit-transform: translateX(-100%);
   -moz-transform: translateX(-100%);
@@ -360,7 +367,7 @@ body > header figure a {
   -o-transform: translateX(-100%);
   transform: translateX(-100%);
 }
-/* line 272, ../sass/main.sass */
+/* line 275, ../sass/main.sass */
 #projects article [image-slider] ul li.current {
   -webkit-transform: translateX(0);
   -moz-transform: translateX(0);
@@ -368,7 +375,7 @@ body > header figure a {
   -o-transform: translateX(0);
   transform: translateX(0);
 }
-/* line 274, ../sass/main.sass */
+/* line 277, ../sass/main.sass */
 #projects article [image-slider] ul li.current + li {
   -webkit-transform: translateX(100%);
   -moz-transform: translateX(100%);
@@ -376,125 +383,180 @@ body > header figure a {
   -o-transform: translateX(100%);
   transform: translateX(100%);
 }
-/* line 276, ../sass/main.sass */
+/* line 279, ../sass/main.sass */
 #projects article [image-slider] ul li img {
   width: 100%;
   -webkit-user-drag: none;
 }
-/* line 279, ../sass/main.sass */
+/* line 282, ../sass/main.sass */
 #projects article [image-slider] ul li img:hover {
   opacity: 0.95;
 }
-/* line 281, ../sass/main.sass */
+/* line 284, ../sass/main.sass */
 #projects img {
   cursor: pointer;
 }
 
-/* line 285, ../sass/main.sass */
+/* line 288, ../sass/main.sass */
 #blog article, #post article {
   width: 61.8033%;
 }
-/* line 287, ../sass/main.sass */
+/* line 290, ../sass/main.sass */
 #blog article ol, #blog article ul, #post article ol, #post article ul {
   overflow: visible;
   margin-left: 20px;
 }
-/* line 290, ../sass/main.sass */
+/* line 293, ../sass/main.sass */
 #blog article ol li, #blog article ul li, #post article ol li, #post article ul li {
   overflow: visible;
   margin-bottom: 15px;
 }
-/* line 293, ../sass/main.sass */
+/* line 296, ../sass/main.sass */
 #blog article ol li em, #blog article ul li em, #post article ol li em, #post article ul li em {
   font-style: normal;
 }
-/* line 295, ../sass/main.sass */
+/* line 298, ../sass/main.sass */
 #blog article ol li p, #blog article ul li p, #post article ol li p, #post article ul li p {
   font-size: 14px;
   color: #505050;
 }
 
-/* line 298, ../sass/main.sass */
+/* line 301, ../sass/main.sass */
 #post {
   margin-top: 80px;
 }
-/* line 300, ../sass/main.sass */
+/* line 303, ../sass/main.sass */
 #post h1 {
   font-size: 50px;
   margin-bottom: 30px;
   line-height: 54px;
 }
-/* line 304, ../sass/main.sass */
+/* line 307, ../sass/main.sass */
 #post h2 {
   font-size: 20px;
 }
-/* line 306, ../sass/main.sass */
+/* line 309, ../sass/main.sass */
 #post h3 {
   font-size: 30px;
   font-weight: 400;
   margin-bottom: 12px;
   margin-top: 5px;
 }
-/* line 311, ../sass/main.sass */
+/* line 314, ../sass/main.sass */
 #post h4 {
-  font-size: 22px;
   margin-bottom: 10px;
   margin-top: 17px;
   color: #505050;
 }
-/* line 316, ../sass/main.sass */
+/* line 318, ../sass/main.sass */
 #post span.code {
   background: #f0f0f0;
   font-family: monospace;
 }
-/* line 319, ../sass/main.sass */
+/* line 321, ../sass/main.sass */
 #post a.quote {
   text-decoration: none;
 }
-/* line 321, ../sass/main.sass */
+/* line 323, ../sass/main.sass */
 #post a.quote:hover {
   text-decoration: underline;
 }
 
-/* line 324, ../sass/main.sass */
+/* line 326, ../sass/main.sass */
 .scroll {
   position: relative;
 }
 
 @media all and (min-width: 1201px) and (max-width: 1400px) {
-  /* line 330, ../sass/main.sass */
+  /* line 332, ../sass/main.sass */
   body > * {
     width: 1020px;
   }
+
+  /* line 334, ../sass/main.sass */
+  h1 {
+    font-size: 62px;
+  }
+
+  /* line 336, ../sass/main.sass */
+  h2 {
+    font-size: 31px;
+  }
+
+  /* line 338, ../sass/main.sass */
+  h3 {
+    font-size: 23px;
+  }
+
+  /* line 341, ../sass/main.sass */
+  #post h1 {
+    font-size: 52px;
+  }
+  /* line 343, ../sass/main.sass */
+  #post h2 {
+    font-size: 22px;
+  }
+  /* line 345, ../sass/main.sass */
+  #post h3 {
+    font-size: 32px;
+  }
 }
 @media all and (min-width: 1401px) {
-  /* line 334, ../sass/main.sass */
+  /* line 350, ../sass/main.sass */
   body > * {
     width: 1080px;
   }
+
+  /* line 353, ../sass/main.sass */
+  h1 {
+    font-size: 64px;
+  }
+
+  /* line 355, ../sass/main.sass */
+  h2 {
+    font-size: 32px;
+  }
+
+  /* line 357, ../sass/main.sass */
+  h3 {
+    font-size: 24px;
+  }
+
+  /* line 360, ../sass/main.sass */
+  #post h1 {
+    font-size: 54px;
+  }
+  /* line 362, ../sass/main.sass */
+  #post h2 {
+    font-size: 24px;
+  }
+  /* line 364, ../sass/main.sass */
+  #post h3 {
+    font-size: 36px;
+  }
 }
 @media all and (max-width: 500px) {
-  /* line 341, ../sass/main.sass */
+  /* line 372, ../sass/main.sass */
   body {
     font-size: 13px;
   }
-  /* line 342, ../sass/main.sass */
+  /* line 373, ../sass/main.sass */
   body * {
     overflow: hidden;
   }
-  /* line 346, ../sass/main.sass */
+  /* line 377, ../sass/main.sass */
   body > * {
     width: auto;
     padding: 20px;
   }
 
-  /* line 350, ../sass/main.sass */
+  /* line 381, ../sass/main.sass */
   h1 {
     font-size: 42px;
     letter-spacing: -2px;
   }
 
-  /* line 354, ../sass/main.sass */
+  /* line 385, ../sass/main.sass */
   h2 {
     font-size: 25px;
     border-bottom: 2px solid #e2e2e2;
@@ -503,42 +565,62 @@ body > header figure a {
     letter-spacing: -1px;
   }
 
-  /* line 361, ../sass/main.sass */
+  /* line 392, ../sass/main.sass */
   h3 {
     font-size: 21px;
   }
 
-  /* line 364, ../sass/main.sass */
+  /* line 396, ../sass/main.sass */
+  #blog article, #post article {
+    width: auto;
+  }
+
+  /* line 400, ../sass/main.sass */
+  #post h1 {
+    font-size: 40px;
+    line-height: 39px;
+  }
+  /* line 403, ../sass/main.sass */
+  #post h2 {
+    font-size: 20px;
+  }
+  /* line 405, ../sass/main.sass */
+  #post h3 {
+    font-size: 30px;
+    line-height: 32px;
+  }
+
+  /* line 409, ../sass/main.sass */
   #intro {
     margin: 0 0 30px 0;
   }
-  /* line 366, ../sass/main.sass */
+  /* line 411, ../sass/main.sass */
   #intro h1 {
     margin-bottom: 15px;
   }
-  /* line 368, ../sass/main.sass */
+  /* line 413, ../sass/main.sass */
   #intro h3 {
     margin-left: 8px;
   }
 
-  /* line 371, ../sass/main.sass */
+  /* line 416, ../sass/main.sass */
   #tags {
     display: none;
   }
 
-  /* line 375, ../sass/main.sass */
+  /* line 420, ../sass/main.sass */
   #projects h3, #blog h3 {
     margin-top: 15px;
   }
 
-  /* line 380, ../sass/main.sass */
+  /* line 425, ../sass/main.sass */
   #projects article [image-slider] {
     float: none;
     margin-left: 0;
     position: relative;
     width: auto;
   }
-  /* line 385, ../sass/main.sass */
+  /* line 430, ../sass/main.sass */
   #projects article [image-slider] nav {
     margin-left: 0;
     position: absolute;
@@ -549,56 +631,51 @@ body > header figure a {
     text-align: center;
     height: 100%;
   }
-  /* line 394, ../sass/main.sass */
+  /* line 439, ../sass/main.sass */
   #projects article [image-slider] nav div {
-    background-color: rgba(255, 255, 255, 0.3);
+    background-color: rgba(255, 255, 255, 0.02);
     height: 100%;
   }
-  /* line 395, ../sass/main.sass */
+  /* line 440, ../sass/main.sass */
   #projects article [image-slider] nav div:before {
     content: "";
     display: inline-block;
     height: 100%;
     vertical-align: middle;
   }
-  /* line 402, ../sass/main.sass */
+  /* line 447, ../sass/main.sass */
   #projects article [image-slider] nav div:first-child {
     float: right;
   }
-  /* line 404, ../sass/main.sass */
+  /* line 449, ../sass/main.sass */
   #projects article [image-slider] nav div:last-child {
     float: left;
   }
-  /* line 406, ../sass/main.sass */
+  /* line 451, ../sass/main.sass */
   #projects article [image-slider] nav div a {
     display: inline-block;
     vertical-align: middle;
   }
-  /* line 410, ../sass/main.sass */
+  /* line 455, ../sass/main.sass */
   #projects article [image-slider] ul {
-    width: auto;
-  }
-
-  /* line 413, ../sass/main.sass */
-  #blog article, #post article {
     width: auto;
   }
 }
 @media all and (max-width: 460px) {
-  /* line 420, ../sass/main.sass */
+  /* line 462, ../sass/main.sass */
   body header {
     text-align: center;
   }
-  /* line 422, ../sass/main.sass */
+  /* line 464, ../sass/main.sass */
   body header figure {
     float: none;
     display: inline-block;
   }
-  /* line 425, ../sass/main.sass */
+  /* line 467, ../sass/main.sass */
   body header nav {
     clear: left;
   }
-  /* line 427, ../sass/main.sass */
+  /* line 469, ../sass/main.sass */
   body header nav ul {
     float: none;
   }
