--- a/dev/partials/post.html
+++ b/dev/partials/post.html
@@ -5,4 +5,9 @@
 		<div tags="post.tags"></div>
 		<div ng-include="'partials/posts/'+postId+'.html'"></div>
 	</article>
+	<div class="fixed-upper-right">
+		<div>
+			<a href="#">Home</a>
+		</div>
+	</div>
 </div>
